# LLM-Enhanced-MARL-Based-IDS-for-IoT

./: .gitignore  COMPLETE.md  DELIVERY_SUMMARY.md  HOW_TO_RUN_KAGGLE.md  KAGGLE_TRAINING_GUIDE.md  LLM_MARL_IDS_Specification.md  PROJECT_STRUCTURE.md  Quick_Reference_Guide.md  README.md  implementation_roadmap.md  pyproject.toml  requirements.txt
config/: kaggle_config.yaml  training_config.yaml
docs/: PHI3_VS_GPT4.md
notebooks/: kaggle_preprocess_iot23.ipynb  kaggle_training_template.ipynb
src/cloud/: explanation_generator.py  local_llm_explanation.py
src/edge/: edge_agent.py
src/fog/: marl_environment.py  train_mappo.py
src/training/: attacker_agent.py
